# vegh

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/my-project/: index.js  package.json
examples/snaps/: my-project.snap
src/: cli.rs  core.rs  hash.rs  lib.rs  main.rs  storage.rs  tests.rs
tests/: e2e_simulation.sh  test_filtering.sh
tests/my-project/: package-lock.json
tests/snaps/: my-project.snap
