[package]
name = "vegh"
version = "0.3.0" 
edition = "2024"
authors = ["CodeTease"]
description = "A lightweight, fast snapshot tool for developers."

[dependencies]
# CLI Parser
clap = { version = "4.4", features = ["derive"] }

# Error Handling
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# File System Walking
ignore = "0.4"

# Compression
zstd = "0.13"

# Tarball
tar = "0.4"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Metadata - JSON & Time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
futures = "0.3"

# UI/UX
console = "0.16.1"
indicatif = "0.18.3"
colored = "3.0.0"