[package]
name = "vegh"
version = "0.3.0" 
edition = "2024"
authors = ["CodeTease"]
description = "A lightweight, fast snapshot tool for developers."

[dependencies]
# CLI Parser
clap = { version = "4.4", features = ["derive"] }

# Error Handling
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Signal Handling (Ctrl+C)
# [NEW] Added to handle graceful shutdowns and save cache
ctrlc = "3.4"

# File System Walking
ignore = "0.4"

# Parallel Processing
rayon = "1.10"

# Compression
zstd = { version = "0.13", features = ["zstdmt"] }

# Tarball
tar = "0.4"

# Hashing
blake3 = { version = "1.5", features = ["rayon", "mmap"] }
hex = "0.4"
memmap2 = "0.9"

# Metadata - JSON & Time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "multipart"] }
futures = "0.3"

# UI/UX
console = "0.16.1"
indicatif = "0.18.3"
colored = "3.0.0"